fix gallery sizing on mobile

--- a/src/squiffles.css
+++ b/src/squiffles.css
@@ -1267,6 +1267,11 @@ body.page #sidebar {
     font-size: 1.96vw;
   }
 }
+@media only screen and (hover: none) {
+  .showcase {
+    font-size: 1em;
+  }
+}
 @media (max-aspect-ratio: 4/5) {
   #fishbot .links {
     font-size: 1em;
